@@ -30,7 +30,6 @@ public interface LogMessageCache extends Cache {
    * @param queryString Index query string.
    * @return List of log messages.
    * @throws CacheException if error.
-   *
    */
   List<LogMessage> find(final String queryString) throws CacheException;
 
@@ -51,4 +50,10 @@ public interface LogMessageCache extends Cache {
    */
   int getSize() throws CacheException;
 
+  /**
+   * Clears the entire cache.
+   *
+   * @throws CacheException if unable to clear cache.
+   */
+  void clear() throws CacheException;
 }
